# eraser

./: CMakeLists.txt  Jamroot  README  old_mf  program_tests.txt  run  runex1  runmany
docs/: Definitions.txt  Design.txt
inputs/ex1/: Cell.java  Ex1.java  LifeThreads.java  ParallelGameOfLife.java  SerialGameOfLife.java
inputs/helloworld/: Main.java
inputs/inc/: Inc.java
inputs/inc/inc/: Cell.java  MethodSynchWorker.java  SynchWorker.java  Worker.java
inputs/trivial/: Inc.java
inputs/trivial/inc/: Cell.java
inputs/tsync/: Inc.java
inputs/tsync/inc/: Cell.java  SubCell.java
src/: .cproject  .project
src/eraser/: Proxy.java  agent.cpp  agent.h  assert_handler.h  common.h  crw_hooks.cpp  crw_hooks.h  instrumentation.cpp  instrumentation.h  lock.cpp  lock.h  lock_policy.h  logger.h  main.cpp  monitor.h  shared_var.cpp  shared_var.h  shared_var_impl.h  shared_var_inst.h  shared_vars_manage.h  static_vars.h  tag.h  tags  thread.h  thread_compare.h  threads_manage.cpp  threads_manage.h  traits.h  universal_set.h  vm_hooks.cpp  vm_hooks.h
src/eraser/old_backup/: common.h  field_uniq.h  logger.h
src/sun/: java_crw_demo.c
src/test/: Makefile  locked.cpp  shared_var.cpp  traits.h  universal_set.cpp
